--- a/index.html
+++ b/index.html
@@ -101,12 +101,121 @@
     <section class="content">
       <h2 style="display: none;">Content</h2>
       <section class="content--list">
-        <h3>Content List</h3>
-        <div class="content--list-controls">
-        </div>
+        <h3 style="display: none;">Content List</h3>
+        <form>
+          <fieldset>
+            <select>
+              <option>Views</option>
+              <option>Unread</option>
+              <option>Mentions</option>
+              <option>Drafts</option>
+              <option>Later</option>
+            </select>
+            <div class="select-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M6 9l6 6l6 -6"></path>
+              </svg>
+            </div>
+          </fieldset>
+          <fieldset>
+            <select>
+              <option>Filter Messages</option>
+              <option>Direct Messages</option>
+              <option>Group Messages</option>
+              <option>Broadcast</option>
+              <option>Forums</option>
+            </select>
+            <div class="select-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M6 9l6 6l6 -6"></path>
+              </svg>
+            </div>
+          </fieldset>
+          <fieldset>
+            <select>
+              <option>Sort Messages</option>
+              <option>High Priority</option>
+              <option>Medium Priority</option>
+              <option>Low Priority</option>
+            </select>
+            <div class="select-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M6 9l6 6l6 -6"></path>
+              </svg>
+            </div>
+          </fieldset>
+        </form>
+        <ul class="list">
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Firstname Lastname</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots-vertical" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="avatar"></div>
+            <div class="details">
+              <p>Group Name</p>
+              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <ul class="status">
+                <li class="status">Read</li>
+                <li class="time">11:48am</li>
+              </ul>
+            </div>
+            <div class="actions">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots-vertical" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+              </svg>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="content--details">
-        <h3>Content Details</h3>
+        <h3 style="display: none;">Content Details</h3>
+        <div class="content--details-header">
+          <h4>Content Details Header</h4>
+          <div class="controls">
+            <span class="avatar"></span>
+            <span class="call"></span>
+          </div>
+        </div>
+        <div class="content--details-main">
+          <h4>Content Details Main</h4>
+        </div>
+        <div class="content--details-footer">
+          <h4>Content Details Footer</h4>
+        </div>
       </section>
     </section>
   </main>
