--- a/projects/amen/index.html
+++ b/projects/amen/index.html
@@ -12,17 +12,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/master.min.css">
   <style>
     body {
       opacity: 0;
-      -webkit-transition: opacity 1.5s ease-in;
-      -moz-transition: opacity 1.5s ease-in;
-      -ms-transition: opacity 1.5s ease-in;
-      -o-transition: opacity 1.5s ease-in;
-      transition: opacity 1.5s ease-in;
+      -webkit-transition: opacity 1s ease-in;
+      -moz-transition: opacity 1s ease-in;
+      -ms-transition: opacity 1s ease-in;
+      -o-transition: opacity 1s ease-in;
+      transition: opacity 1s ease-in;
     }
 
     body.visible {
