--- a/projects/amen/index.html
+++ b/projects/amen/index.html
@@ -68,10 +68,10 @@
         <h2>Views</h2>
         <ul class="contents">
           <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
-          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li>
+          <!-- <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li> -->
           <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
-          <li><a href="projects/amen/views/ingestion/index.html">Ingestion</a></li>
-          <li><a href="projects/amen/views/integration/index.html">Integration</a></li>
+          <!-- <li><a href="projects/amen/views/ingestion/index.html">Ingestion</a></li> -->
+          <!-- <li><a href="projects/amen/views/integration/index.html">Integration</a></li> -->
         </ul>
       </section>
     </article>
